<resources>
    <string name="app_name">Bit Bytes</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>


    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usrname_hint">Username</string>
    <string name="pswd_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_button_title">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="sign_up_error_title">Error</string>
    <string name="sign_up_error">Sorry, all fields are required!</string>
    <string name="ok_button_dialog">OK</string>
    <string name="error_general_title">Looks like there was an error!</string>
    <string name="error_general_message">Something went wrong!</string>
    <string name="success_title">Success!</string>
    <string name="success_message">Welcome to Bit Bytes!</string>
    <string name="menu_logout">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="edit_friends_menu">Edit Friends</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="menu_camera">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error_toast">Sorry there was an error</string>
    <string name="video_file_size_warn">The selected video must be less than 10 MB</string>
    <string name="video_file_size">File must be 10 MB or less</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_list_recipent_message">Find some friends!</string>
</resources>
