<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cypherbytes.bitbytes.LoginActivity"
    android:id="@+id/loginLayout"
    android:background="@drawable/bg_login">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userIdField"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/usrname_hint"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_below="@+id/userIdField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/pswd_hint" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_title"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        style="@style/buttons" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signUpTextView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        style="@style/fonts" />
</RelativeLayout>
