<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cypherbytes.bitbytes.ui.SignUpActivity"
    android:background="@drawable/bg_login">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:hint="@string/usrname_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_below="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:hint="@string/pswd_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/email_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_label"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/emailField"
        android:layout_centerHorizontal="true"
        style="@style/buttons" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpProgressBar"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:indeterminate="true"/>
</RelativeLayout>
